# bonpreu-product-api

./: .gitignore  data.json  docker-compose.yml  main.py  nutritional_data.json  products.json  pyproject.toml
app/: config.py  database.py  main.py
app/import_module/: crud.py  models.py  service.py  utils.py
