[project]
name = "bonpreu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "fastapi>=0.115.6",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.37",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.34.0",
]
